Last commit of old design

--- a/_back-end/_layouts/base.njk
+++ b/_back-end/_layouts/base.njk
@@ -156,8 +156,8 @@ jsFiles: []
                                             {% include "../../website-source/_shared/images/icons/icon-rss.svg" %}
                                         {% elif item.logo == "tag" %}
                                             {% include "../../website-source/_shared/images/icons/icon-tag.svg" %}
-                                        {% elif item.logo == "reading" %}
-                                            {% include "../../website-source/_shared/images/icons/icon-book.svg" %}
+                                            {# {% elif item.logo == "reading" %} #}
+                                            {# {% include "../../website-source/_shared/images/icons/icon-book.svg" %} #}
                                         {% endif %}
                                         {{ item.label }}</a>
                                 </li>
