--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -16,7 +16,7 @@ eleventyNavigation:
 <article>
 
     <div class="rs-column flow">
-        <p>If you need your <strong>website</strong> to communicate clearly, or effective and engaging <strong>e&#8209;learning</strong>, or a clean, maintainable <strong>interface</strong> for your web app, Rising Sky can help. We design and develop human-friendly web content. </p>
+        <p>If you need a <strong>website</strong> that has an impact, effective and engaging <strong>e&#8209;learning</strong>, or a clean and maintainable <strong>user interface</strong> for your web app, Rising Sky can help. We design and develop human-friendly web content.</p>
 
         <p>We also provide  <strong>advice</strong> on updating legacy websites, adopting new technology, and customising the <a href="https://www.im-c.com/learning-suite/" target="_blank">IMC Learning Management System</a>.</p>
 
