--- a/website-source/reading-list.njk
+++ b/website-source/reading-list.njk
@@ -371,4 +371,9 @@ Hide #}
 
     18/7/24 https://joanwestenberg.com/macro-morons-with-micro-visions-the-vc-disaster-tour
 
+https://www.loom.com/share/ee9d3d6416fd41128cc978132d744c7e?sid=8a43584e-92e2-41e2-a542-dc52961d7679 Andy shows us how you can get a lot done just by tackling global level styles first. I found this video really helpful on a personal level as I've never worked in a 'studio' before so it brought me confidence when I saw that I do a lot of similar things - I also learned a lot and can see plenty where I need to improve.
+
+https://piccalil.li/blog/redesigning-piccalilli-the-first-part-of-the-design-process/ Real world examples are great
+
+https://alistapart.com/article/priority-guides-a-content-first-alternative-to-wireframes/ The problem with wireframes forcing a final design and ignoring content priority
  #}
