--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -25,7 +25,9 @@ eleventyNavigation:
 
     <h2>Example projects</h2>
 
-    <h3><em>E&#8209;learning</em>: UAS A1+A3 &amp; UAS A2</h3>
+    <h3 class="rs-colour-text-highlight-shade">E&#8209;LEARNING: UAS A1+A3 &amp; UAS A2</h3>
+
+    <img class="rs-column-main-breakout rs-project-example-hero" src="_shared/images/uas-a2-hero.png" alt="A screenshot of the welcome page for the UAS A2 course.">
 
     <p>Flying a drone in Europe now requires pilots to take an online training course then pass a theoretical exam. A partnership between the <a href="https://dac.gouvernement.lu/" target="_blank">Direction de l'Aviation Civile of Luxembourg</a> (DAC) and the <a href="https://www.eurocontrol.int/" target="_blank">EUROCONTROL</a> <a href="https://learningzone.eurocontrol.int/ilp/" target="_blank">Aviation Learning Centre</a> engaged me to work with their teams to storyboard, design and build a pair of multilingual courses to meet this requirement.</p>
 
